WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138614
[iOS] cleanup wireless route monitoring
https://bugs.webkit.org/show_bug.cgi?id=138614
Summary
[iOS] cleanup wireless route monitoring
Eric Carlson
Reported
2014-11-11 10:39:27 PST
Cleanup.
Attachments
Proposed patch.
(9.23 KB, patch)
2014-11-11 10:55 PST
,
Eric Carlson
jer.noble
: review+
Details
Formatted Diff
Diff
Patch for landing.
(9.23 KB, patch)
2014-11-11 11:08 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2014-11-11 10:39:57 PST
<
rdar://problem/18930328
>
Eric Carlson
Comment 2
2014-11-11 10:40:33 PST
<
rdar://problem/18940875
>
Eric Carlson
Comment 3
2014-11-11 10:55:45 PST
Created
attachment 241358
[details]
Proposed patch.
WebKit Commit Bot
Comment 4
2014-11-11 10:58:23 PST
Attachment 241358
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.mm:263: Use 'WTF::move()' instead of 'std::move()'. [runtime/wtf_move] [4] ERROR: Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.mm:264: Use 'WTF::move()' instead of 'std::move()'. [runtime/wtf_move] [4] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jer Noble
Comment 5
2014-11-11 11:01:35 PST
Comment on
attachment 241358
[details]
Proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=241358&action=review
r=me, with nits.
> Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.mm:239 > + LOG(Media, "WebMediaSessionHelper::initWithCallback");
Maybe: "-[WebMediaSessionHelper initWithCallback]"?
> Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.mm:266 > - (void)dealloc > { > + LOG(Media, "WebMediaSessionHelper::initWithCallback");
Really? ;)
> Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.mm:270 > + auto volumeView = std::move(_volumeView); > + auto routingController = std::move(_airPlayPresenceRoutingController);
I think we're supposed to use WTF::move() now.
> Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.mm:273 > + LOG(Media, "WebMediaSessionHelper::initWithCallback - dipatched to MainThread");
initWithCallback -> dealloc
Eric Carlson
Comment 6
2014-11-11 11:08:50 PST
Created
attachment 241362
[details]
Patch for landing.
WebKit Commit Bot
Comment 7
2014-11-11 14:03:16 PST
Comment on
attachment 241362
[details]
Patch for landing. Clearing flags on attachment: 241362 Committed
r175976
: <
http://trac.webkit.org/changeset/175976
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug